[package]
name = "dmdr-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
dmdr-core = { version = "*", path = "../dmdr-core" }
clap = { version = "4.5.42", features = ["derive"] }
clap_derive = "4.5.41"
graphviz-rust = "0.9.5"
ahash = { version = "0.8.12", features = ["serde"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
strip = true
panic = 'abort'
incremental = false
overflow-checks = false
